// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox.ts should apply classes to root element 1`] = `
<div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox shrink mr-2 mt-0 primary--text">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
           aria-hidden="true"
        >
        </i>
        <input aria-checked="true"
               id="input-117"
               role="checkbox"
               type="checkbox"
               checked
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light primary--text">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should be disabled 1`] = `
<input aria-checked="false"
       disabled
       id="input-107"
       role="checkbox"
       type="checkbox"
>
`;

exports[`VCheckbox.ts should be render colored checkbox 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
           aria-hidden="true"
        >
        </i>
        <input aria-checked="false"
               id="input-112"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should render themed component 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
           aria-hidden="true"
        >
        </i>
        <input aria-checked="false"
               id="input-102"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should use custom icons 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i class="v-icon notranslate material-icons theme--light"
           aria-hidden="true"
        >
          fizzbuzz
        </i>
        <input aria-checked="mixed"
               id="input-97"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should use custom icons 2`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i class="v-icon notranslate material-icons theme--light"
           aria-hidden="true"
        >
          fizzbuzz
        </i>
        <input aria-checked="mixed"
               id="input-97"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should use custom icons 3`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i class="v-icon notranslate material-icons theme--light"
           aria-hidden="true"
        >
          fizzbuzz
        </i>
        <input aria-checked="mixed"
               id="input-97"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;
